Fix styles for all collapsed columns

--- a/console/src/components/Common/TableCommon/ReactTableOverrides.css
+++ b/console/src/components/Common/TableCommon/ReactTableOverrides.css
@@ -42,6 +42,7 @@
 
 .ReactTable .rt-thead.-header {
   box-shadow: none;
+  min-height: 32px;
 }
 
 .ReactTable .-pagination {
